--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "sails": "~0.10.0-rc3",
     "sails-disk": "~0.10.0",
+    "sails-mongo": "~0.10.0",
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
     "grunt-sync": "~0.0.4",
