--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     },
     "devDependencies": {
         "istanbul": "*",
-        "coveralls": "*"
+        "coveralls": "*",
+        "mocha": "~1.17.1"
     },
     "scripts": {
         "start": "node app.js",
         "debug": "node debug app.js",
-        "test": "istanbul cover _mocha --report lcovonly && cat ./coverage/lcov.info | coveralls"
+        "test": "istanbul cover _mocha --report lcovonly && cat. /coverage/lcov.info | coveralls"
     },
     "main": "app.js",
     "repository": {
