--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "scripts": {
         "start": "node app.js",
         "debug": "node debug app.js",
-        "test": "istanbul cover _mocha --report lcovonly && cat. /coverage/lcov.info | coveralls"
+        "test": "mocha"
     },
     "main": "app.js",
     "repository": {
