--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     },
     "scripts": {
         "start": "node app.js",
-        "debug": "node debug app.js",
-        "test": "mocha"
+        "debug": "node debug app.js"
+        /*"test": "mocha"*/
     },
     "main": "app.js",
     "repository": {
