First shot at passport.js auth

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "sails-disk": "~0.10.0",
         "sails-mongo": "~0.10.0-rc1",
         "ejs": "~0.8.4",
+        "passport": "*",
+        "passport-local": "*",
+        "bcrypt": "*",
         "grunt": "0.4.2",
         "grunt-sync": "~0.0.4",
         "grunt-contrib-copy": "~0.4.1",
